--- a/src/app/shared/components/mobilenavigation/mobilenavigation.html
+++ b/src/app/shared/components/mobilenavigation/mobilenavigation.html
@@ -2,7 +2,7 @@
   <img src="/assets/icons/logo-full-brand.svg" alt="logo" width="120" height="52" class="h-auto">
 
 
-  <div class="drawer lg:drawer-open drawer-end flex justify-end ">
+  <div class="drawer relative z-[1000000] lg:drawer-open drawer-end flex justify-end ">
     <input id="my-drawer-2" type="checkbox" class="drawer-toggle" />
     <div class="">
       <!-- Page content here -->
