--- a/src/app/layout/dashboard-layout/dashboard-layout.html
+++ b/src/app/layout/dashboard-layout/dashboard-layout.html
@@ -36,13 +36,12 @@
           @if (files.length > 0) {
           <ul class="mt-5 flex flex-col gap-5">
             @for (file of files; track file.$id) {
-            <div class="flex gap-4 items-center">
+            <div class="flex gap-4 items-center ">
               <a [href]="file?.['url'] ?? ''" target="_blank">
                 <app-thumbnail [type]="file?.['type'] ?? ''" [extension]="file?.['extention'] ?? ''"
                   [url]="file?.['url'] ?? ''"></app-thumbnail>
               </a>
-
-              <div class="recent-file-details">
+              <div class="flex justify-between items-center w-full">
                 <div class="flex flex-col gap-1">
                   <p class="recent-file-name">{{ file?.['name'] ?? '' }}</p>
                   <app-formatted-date-time [date]="file?.['$createdAt'] ?? ''" class="caption">
