--- a/src/app/layout/auth-layout/auth-layout.html
+++ b/src/app/layout/auth-layout/auth-layout.html
@@ -1,4 +1,4 @@
-<div class="flex min-h-screen">
+<div class="flex min-h-screen overflow-x-hidden">
   <!-- Left Section (hidden on small screens) -->
   <section class="hidden  w-1/2 items-center justify-center bg-[#FA7275] p-10 lg:flex xl:w-2/5">
     <div class="flex max-h-[800px] max-w-[430px] flex-col justify-center space-y-12">
