--- a/src/app/shared/components/chart/chart.html
+++ b/src/app/shared/components/chart/chart.html
@@ -1,4 +1,4 @@
-<div class="bg-rose-400 text-white p-4 rounded-lg flex justify-center items-center flex-col  md:gap-2">
+<div class="bg-rose-400 text-white p-4 rounded-lg flex justify-center items-center flex-col  md:gap-2 overflow-hidden">
   <ng-container *ngIf="chartOptions && chartOptions.axes">
     <ejs-circulargauge [axes]="chartOptions.axes" width="400" height="400">
     </ejs-circulargauge>
