--- a/src/app/shared/components/authfrom/authfrom.html
+++ b/src/app/shared/components/authfrom/authfrom.html
@@ -1,4 +1,4 @@
-<form [formGroup]="authForm" (ngSubmit)="onSubmit()" class="auth-form">
+<form [formGroup]="authForm" (ngSubmit)="onSubmit()" class="auth-form overflow-hidden ">
   <h1 class="form-title">
     @if (type === 'sign-in') {
     Sign In
