--- a/src/app/shared/components/otpmodel/otpmodel.html
+++ b/src/app/shared/components/otpmodel/otpmodel.html
@@ -1,11 +1,11 @@
-<dialog [open]="showModal" class="modal   modal-middle">
+<dialog [open]="showModal" class="modal    modal-middle">
   <div class="modal-box bg-white  rounded-2xl ">
     <div class="flex flex-col gap-3 text-black  text-center">
       <h3 class="text-4xl font-bold">Enter OTP</h3>
       <p class="py-4 ">Please enter the OTP sent to {{ email }}</p>
     </div>
     <div class="flex flex-col items-center justify-center gap-3  ">
-      <form (submit)="handleSubmit()" class="gap-2 flex">
+      <form (submit)="handleSubmit()" class="flex">
         <input #otp1 placeholder="0" type="text" class="otp-style" pattern="\d*" maxlength="1"
           (input)="onOtpInput($event, 0)" (keyup)="onOtpInput($event, 0)" (paste)="onOtpPaste($event)" />
         <input #otp2 placeholder="0" type="text" class="otp-style" pattern="\d*" maxlength="1"
