--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,15 +67,11 @@ body {
 }
 
 .auth-form {
-  @apply flex max-h-[800px] w-full max-w-[580px] flex-col justify-center space-y-6 transition-all lg:h-full lg:space-y-8;
+  @apply flex max-h-[800px] max-w-[400px] flex-col justify-center space-y-6 transition-all lg:h-full lg:space-y-8;
 }
 
 .input {
   @apply flex h-[78px] flex-col justify-center rounded-xl px-4;
-}
-
-.auth-form {
-  @apply flex max-h-[800px] w-full max-w-[580px] flex-col justify-center space-y-6 transition-all lg:h-full lg:space-y-8;
 }
 
 .form-title {
@@ -91,7 +87,7 @@ body {
 }
 
 .form-input {
-  @apply px-3 py-5 border border-0 outline outline-0 rounded-lg shadow-md w-[400px] md:w-[560px] md:mx-auto mx-auto placeholder:text-gray-500 text-gray-800;
+  @apply px-3 py-5 border border-0 outline outline-0 rounded-lg shadow-md w-[300px] md:w-[560px] md:mx-auto mx-auto placeholder:text-gray-500 text-gray-800;
 }
 
 .form-message {
@@ -169,7 +165,7 @@ body {
   }
 
   .mobile-header {
-    @apply flex h-[60px] justify-between items-center px-5 sm:hidden 
+    @apply flex h-[60px] justify-between items-center px-5 sm:hidden
   }
 
 .shad-sheet button,
@@ -220,7 +216,7 @@ body {
   animation: spin 1s linear infinite;
 }
 .page-container {
-  @apply mx-auto flex w-full max-w-7xl flex-col items-center gap-8 ;
+  @apply mx-auto flex w-full  overflow-x-hidden flex-col items-center gap-8 ;
 }
 
 .total-size-section {
