--- a/src/app/layout/dashboard-layout/dashboard-layout.html
+++ b/src/app/layout/dashboard-layout/dashboard-layout.html
@@ -31,7 +31,7 @@
           </ul>
         </section>
 
-        <section class="dashboard-recent-files">
+        <section class="dashboard-recent-files overflow-x-hidden">
           <h2 class="h3 xl:h2 text-light-100">Recent files uploaded</h2>
           @if (files.length > 0) {
           <ul class="mt-5 flex flex-col gap-5">
