--- a/src/app/shared/components/otpmodel/otpmodel.html
+++ b/src/app/shared/components/otpmodel/otpmodel.html
@@ -1,6 +1,11 @@
 <dialog [open]="showModal" class="modal    modal-middle">
   <div class="modal-box bg-white  rounded-2xl ">
-    <div class="flex flex-col gap-3 text-black  text-center">
+    <div class="flex flex-col gap-3 text-black  text-center relative">
+      <button (click)="closeModal()" class="absolute cursor-pointer right-0 top-0 text-gray-500 hover:text-gray-700">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+        </svg>
+      </button>
       <h3 class="text-4xl font-bold">Enter OTP</h3>
       <p class="py-4 ">Please enter the OTP sent to {{ email }}</p>
     </div>
@@ -29,7 +34,7 @@
 
 
 
-    <p class="text-black text-center pt-7">Didn’t get a code? <span (click)="handleResendOtp()"
+    <p class="text-black text-center pt-7">Didn't get a code? <span (click)="handleResendOtp()"
         class="text-brand font-bold underline cursor-pointer">Click to
         resend.</span></p>
 
