--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,17 @@
 
 @import "tailwindcss";
 
+
  @plugin "daisyui" {
    themes: light --default, ;
  }
 
 body {
   @apply bg-white text-black;
+}
+
+*{
+  scroll-behavior: smooth
 }
 
 .h1 {
@@ -315,7 +320,82 @@ body {
   @apply text-[14px] leading-[20px]  text-[#131524];
 }
 
+/* Custom Shepherd Theme */
+.shepherd-theme-custom {
+  --shepherd-theme-primary: #FA7275;
+  --shepherd-text-color: #333;
+  --shepherd-bg: #ffffff;
+  --shepherd-border-radius: 4px;
+  --shepherd-element-border-radius: 4px;
+  --shepherd-header-padding: 1rem;
+  --shepherd-text-padding: 1rem;
+  --shepherd-footer-padding: 1rem;
+}
 
+.shepherd-element {
+  border-radius: var(--shepherd-border-radius);
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.7), 0 2px 4px -1px rgba(0, 0, 0, 0.8) !important;
+  z-index: 9999222222;
+}
+
+.shepherd-header {
+  background: var(--shepherd-bg) !important;
+  border-bottom: 1px solid #e5e7eb;
+  padding: var(--shepherd-header-padding);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.shepherd-text {
+  color: var(--shepherd-text-color);
+  padding: var(--shepherd-text-padding);
+}
+
+.shepherd-footer {
+  padding: var(--shepherd-footer-padding);
+  border-top: 1px solid #e5e7eb;
+}
+
+.shepherd-button {
+  background: #FA7275 !important;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  padding: 0.5rem 1.5rem;
+  transition: all 0.3s ease;
+}
+
+.shepherd-button:not(:disabled):hover {
+  background: #f7bebf !important; 
+}
+
+.shepherd-button.shepherd-button-secondary {
+  color: #374151;
+}
+
+.shepherd-button.shepherd-button-secondary:hover {
+  background-color: #000;
+}
+
+.shepherd-cancel-icon {
+  background: transparent;
+  border: none;
+  color: #6b7280;
+  cursor: pointer;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+
+.shepherd-cancel-icon:hover {
+  color: #374151;
+}
+
+.shepherd-modal-overlay-container {
+  display: none !important;
+}
 
 
 * {
