Handeled versions conflict

--- a/src/app/pages/file-list/file-list.html
+++ b/src/app/pages/file-list/file-list.html
@@ -1,4 +1,4 @@
-<div class="page-container">
+<div class="page-container h-screen overflow-hidden">
   <section class="w-full">
     <h1 class="h1 capitalize">{{ type }}</h1>
 
@@ -23,6 +23,3 @@
     <p class="empty-list">No files uploaded</p>
   </ng-template>
 </div>
-
-
-
