--- a/src/styles.scss
+++ b/src/styles.scss
@@ -336,8 +336,8 @@ body {
   border-radius: var(--shepherd-border-radius);
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.7), 0 2px 4px -1px rgba(0, 0, 0, 0.8) !important;
   z-index: 9999222222;
-  width: 80% !important; /* Default width for mobile */
-  max-width: 400px; /* Maximum width for larger screens */
+  width: 80% !important; 
+  max-width: 400px; 
   margin: 0 auto;
 }
 
